# pointCloudProcessing

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: PacketDecoder.h  buildingFacadeExtraction.h  commontools.h  cubicfitting.h  dbscanCLuster.h  lidarOdometry.h  pcaAnalysis.h  pcapReader.h  ringProjection.h  smoothing.h
include/curves/: CubicHermiteSE3Curve.hpp  Curve.hpp  PolynomialSpline.hpp  PolynomialSplineContainer.hpp  PolynomialSplineContainer.tpp  PolynomialSplineScalarCurve.hpp  PolynomialSplineVectorSpaceCurve.hpp  ScalarCurveConfig.hpp  VectorSpaceConfig.hpp  VectorSpaceCurve.hpp  polynomial_splines.hpp  polynomial_splines_containers.hpp  polynomial_splines_traits.hpp
src/: CMakeLists.txt  buildingFacadeExtraction.cpp  dynaObjTest.cpp  lidarOdometry.cpp  localizationTest.cpp  mainFunc.cpp  pcaAnalysis.cpp  pcapReader.cpp  planeFactorTest.cpp  polynomial_splines_traits.cpp  relocalizationTest.cpp  ringProjection.cpp  smoothing.cpp  testconditioncluster.cpp  trjectoryIntepolateTest.cpp
